...
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/general_notification_button" />

    <TextView
        android:id="@+id/helloTextView"
        android:layout_width="382dp"
        android:layout_height="52dp"
        android:layout_marginTop="36dp"
        android:text="Hi, {name}"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
...
